adapt to jdk1.8